<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fbutton_default_color"
    android:layout_height="match_parent"
    tools:context=".fragments.StartFragment">

    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <info.hoang8f.widget.FButton
            android:textColor="#ffffff"
            app:fButtonColor="@color/green"
            android:text="@string/beginner"
            android:id="@+id/btn_beginner"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_5sdp" />

        <info.hoang8f.widget.FButton
            app:fButtonColor="@color/fbutton_color_carrot"
            android:textColor="#ffffff"
            android:text="@string/intermediate"
            android:id="@+id/btn_intermediate"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_5sdp" />

        <info.hoang8f.widget.FButton
            android:textColor="#ffffff"
            app:fButtonColor="@color/fbutton_color_amethyst"
            android:text="@string/advanced"
            android:id="@+id/btn_advanced"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_5sdp" />
    </LinearLayout>

</RelativeLayout>