<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fbutton_color_amethyst"
    tools:context=".fragments.ExtensiveFragment">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize">
        <TextView
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:textAllCaps="true"
            android:text="@string/extension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/btn_audio"
                android:background="?android:selectableItemBackground"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:padding="@dimen/_20sdp"
                    android:src="@drawable/ic_mic"
                    android:scaleType="fitCenter"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_170sdp" />
                <TextView
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:text="@string/audio_to_text"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btn_camera"
                android:background="?android:selectableItemBackground"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:padding="@dimen/_20sdp"
                    android:src="@drawable/ic_camera"
                    android:scaleType="fitCenter"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_170sdp" />
                <TextView
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:text="@string/photo_to_text"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:background="?android:selectableItemBackground"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:padding="@dimen/_20sdp"
                    android:src="@drawable/ic_conversation"
                    android:scaleType="fitCenter"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_170sdp" />
                <TextView
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:text="@string/realtime_conversation"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:background="?android:selectableItemBackground"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:padding="@dimen/_20sdp"
                    android:src="@drawable/ic_book"
                    android:scaleType="fitCenter"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_170sdp" />
                <TextView
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:text="@string/dictionary"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>